# kasl-core

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench.rs
docs/: ANALYZE_ORDER.md  DEV_DOC.md  Int.kash  SYNTAX_LIST.md  USER_DOC.md  sample.kash
docs/user_docs/: 01_introduction.md  02_basics.md  03_operators.md
locales/: en.toml  ja.toml  variants.txt
src/: compiler.rs  lib.rs  localization.rs  main.rs  run_program.rs
src/analyzer/: mod.rs  semantic_analyzer.rs
src/ast/: compilation_data.rs  compilation_state.rs  expression.rs  function.rs  mod.rs  operator.rs  program.rs  statement.rs  symbol_path.rs  symbols.rs  type_def.rs  variables.rs
src/ast/data/: mod.rs  range.rs  symbol_id.rs  symbol_metadata.rs  symbol_path.rs
src/ast_construction/: constructor.rs  mod.rs  namespace_constructor.rs  program_builder.rs  type_resolver.rs
src/ast_nodes/: compilation_data.rs  mod.rs
src/backend/: buffer_compile.rs  mod.rs
src/builtin/: builtin_func.rs  mod.rs  utility.rs
src/compiler/: broadcasting.rs  codegen.rs  compiler.rs  executable.rs  functions.rs  mod.rs  run.rs
src/constructor/: constructor.rs  mod.rs  program_builder.rs
src/error/: interpreter_error.rs  mod.rs  runtime_error.rs
src/interpreter/: interpreter.rs  mod.rs  value.rs
src/language/: ast.rs  builtin_function.rs  function.rs  mod.rs  symbol.rs  token_type.rs
src/lexer/: lexer.rs  mod.rs  token_type.rs
src/lowerer/: mod.rs
src/node/: audio_shader_node.rs  mod.rs
src/parser/: ast.rs  grammar.rs  mod.rs  parser.rs  parser_ast.rs
src/resolver/: member_collector.rs  mod.rs  resolver.rs  symbol_collector.rs  type_collector.rs
src/semantic_analysis/: mod.rs  namespace_constructor.rs
src/tests/: mod.rs  parsing.rs
src/translation/: mod.rs
tests/: common.rs  complex_program.rs  expression.rs  mod.rs  node_tests.rs  parsing.rs  symbol_table.rs  tests.rs
tests/common/: assert.rs  mod.rs  parser.rs
tests/execution/: complex_op_calculation.rs  mod.rs  simple_float_calculation.rs  simple_int_calculation.rs
tests/parser/: mod.rs
tests/semantic/: mod.rs  type_collection.rs
tests/spec/: complex_op_resolution.rs  mod.rs
(+772 files in other folders)
