[package]
name = "kasl-core"
version = "0.1.4"
edition = "2024"
license = "Apache-2.0"
description = "Compile and run KASL programs from your Rust code."
repository = "https://github.com/hatya-mouse/kasl"
homepage = "https://hatya.dev"
readme = "README.md"
exclude = [
    "tests/*",
]

[lib]
name = "kasl"
path = "src/lib.rs"

[dependencies]
cranelift = "0.129.1"
cranelift-codegen = "0.129.1"
cranelift-jit = "0.129.1"
cranelift-module = "0.129.1"
cranelift-native = "0.129.1"
hashbrown = { version = "0.16.1", features = ["serde"] }
kasl-ir = { git = "https://github.com/hatya-mouse/kasl-ir", version = "0.1.0" }
peg = "0.8.5"
rust-embed = "8.11.0"
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.28.0", features = ["derive"] }
toml = "1.0.7"

[dev-dependencies]
insta = { version = "1.46.3", features = ["yaml", "redactions"] }
kasl = { path = "./" }
