[package]
name = "kasl-core"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Parses and translates the kasl code into KASL-IR, an intermediate representation for KASL."
repository = "https://github.com/hatya-mouse/kasl-core"
homepage = "https://hatya.dev"
readme = "README.md"

[lib]
name = "kasl"
path = "src/lib.rs"

[dependencies]
kasl-core = "0.1.0"
kasl-cranelift-backend = "0.1.0"
kasl-ir = "0.1.0"
