[package]
name = "kasl-core"
version = "0.1.9"
edition = "2024"
license = "Apache-2.0"
description = "Parses and translates the kasl code into KASL-IR, an intermediate representation for KASL."
repository = "https://github.com/hatya-mouse/kasl-core"
homepage = "https://hatya.dev"
readme = "README.md"

[lib]
name = "kasl_core"
path = "src/lib.rs"

[dependencies]
hashbrown = { version = "0.16.1", features = ["serde"] }
kasl-ir = "0.1.0"
peg = "0.8.5"
rust-embed = "8.11.0"
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.28.0", features = ["derive"] }
toml = "1.0.7"

[dev-dependencies]
insta = { version = "1.46.3", features = ["yaml", "redactions"] }
kasl-cranelift-backend = "0.1.1"
